added links and padding note

--- a/branding/preview.html
+++ b/branding/preview.html
@@ -50,7 +50,7 @@
 <li>This is intended for <strong>Kiwix developers</strong>.</li>
 <li>If you are not a Kiwix developer, please get in touch with <a href="mailto:contact@kiwix.org">contact@kiwix.org</a>.</li>
 <li>If you are a Kiwix developer, please check in <a href="https://kiwix.slack.com/"><code>#design</code></a> channel on Slack until we publish the visual guidelines.</li>
-<li>⚠️ Github doesnt allow background colors nor borders in README. All logos have no padding (to be added manually) except for <em>Icon</em> which is to be used directly.</li>
+<li>⚠️ All logos are provided without padding, yet padding is mandatory (must be added by user – ask on Slack!) except for <em>Icon</em> which is to be used directly.</li>
 </ul>
 
 <hr />
@@ -59,27 +59,27 @@
 
 <section>
   <h3>Vertical logo SVG (theme-aware)</h3>
-  <img src="kiwix/vertical-logo.svg" />
+  <a target="_blank" href="kiwix/vertical-logo.svg"><img src="kiwix/vertical-logo.svg" /></a>
 </section>
 
 <section>
   <h3>Vertical logo PNG (light)</h3>
-  <img src="kiwix/vertical-logo-light.png" />
+  <a target="_blank" href="kiwix/vertical-logo-light.png"><img src="kiwix/vertical-logo-light.png" /></a>
 </section>
 
 <section class="dark">
   <h3>Vertical logo PNG (dark)</h3>
-  <img src="kiwix/vertical-logo-dark.png" />
+  <a target="_blank" href="kiwix/vertical-logo-dark.png"><img src="kiwix/vertical-logo-dark.png" /></a>
 </section>
 
 <section>
   <h3>Vertical logo SVG (light/source)</h3>
-  <img src="kiwix/vertical-logo-light-source.svg" />
+  <a target="_blank" href="kiwix/vertical-logo-light-source.svg"><img src="kiwix/vertical-logo-light-source.svg" /></a>
 </section>
 
 <section class="dark">
   <h3>Vertical logo SVG (dark/source)</h3>
-  <img src="kiwix/vertical-logo-dark-source.svg" />
+  <a target="_blank" href="kiwix/vertical-logo-dark-source.svg"><img src="kiwix/vertical-logo-dark-source.svg" /></a>
 </section>
 
 <hr />
@@ -88,27 +88,27 @@
 
 <section>
   <h3>Horizontal logo SVG (theme-aware)</h3>
-  <img src="kiwix/horizontal-logo.svg" />
+  <a target="_blank" href="kiwix/horizontal-logo.svg"><img src="kiwix/horizontal-logo.svg" /></a>
 </section>
 
 <section>
   <h3>Horizontal logo PNG (light)</h3>
-  <img src="kiwix/horizontal-logo-light.png" />
+  <a target="_blank" href="kiwix/horizontal-logo-light.png"><img src="kiwix/horizontal-logo-light.png" /></a>
 </section>
 
 <section class="dark">
   <h3>Horizontal logo PNG (dark)</h3>
-  <img src="kiwix/horizontal-logo-dark.png" />
+  <a target="_blank" href="kiwix/horizontal-logo-dark.png"><img src="kiwix/horizontal-logo-dark.png" /></a>
 </section>
 
 <section>
   <h3>Horizontal logo SVG (light/source)</h3>
-  <img src="kiwix/horizontal-logo-light-source.svg" />
+  <a target="_blank" href="kiwix/horizontal-logo-light-source.svg"><img src="kiwix/horizontal-logo-light-source.svg" /></a>
 </section>
 
 <section class="dark">
   <h3>Horizontal logo SVG (dark/source)</h3>
-  <img src="kiwix/horizontal-logo-dark-source.svg" />
+  <a target="_blank" href="kiwix/horizontal-logo-dark-source.svg"><img src="kiwix/horizontal-logo-dark-source.svg" /></a>
 </section>
 
 <hr />
@@ -117,17 +117,17 @@
 
 <section>
   <h3>Square logo SVG (theme-aware)</h3>
-  <img src="kiwix/square-logo.svg" />
+  <a target="_blank" href="kiwix/square-logo.svg"><img src="kiwix/square-logo.svg" /></a>
 </section>
 
 <section>
   <h3>Square logo PNG (light)</h3>
-  <img src="kiwix/square-logo-light.png" />
+  <a target="_blank" href="kiwix/square-logo-light.png"><img src="kiwix/square-logo-light.png" /></a>
 </section>
 
 <section class="dark">
   <h3>Square logo PNG (dark)</h3>
-  <img src="kiwix/square-logo-dark.png" />
+  <a target="_blank" href="kiwix/square-logo-dark.png"><img src="kiwix/square-logo-dark.png" /></a>
 </section>
 
 
@@ -135,17 +135,17 @@
 
 <section>
   <h3>Icon logo SVG (theme-aware)</h3>
-  <img src="kiwix/icon-logo.svg" />
+  <a target="_blank" href="kiwix/icon-logo.svg"><img src="kiwix/icon-logo.svg" /></a>
 </section>
 
 <section>
   <h3>Icon logo PNG (light)</h3>
-  <img src="kiwix/icon-logo-light.png" />
+  <a target="_blank" href="kiwix/icon-logo-light.png"><img src="kiwix/icon-logo-light.png" /></a>
 </section>
 
 <section class="dark">
   <h3>Icon logo PNG (dark)</h3>
-  <img src="kiwix/icon-logo-dark.png" />
+  <a target="_blank" href="kiwix/icon-logo-dark.png"><img src="kiwix/icon-logo-dark.png" /></a>
 </section>
 
 <hr />
@@ -154,17 +154,17 @@
 
 <section>
   <h3>Horizontal logo SVG (theme-aware)</h3>
-  <img src="kiwix-hotspot/horizontal-logo.svg" />
+  <a target="_blank" href="kiwix-hotspot/horizontal-logo.svg"><img src="kiwix-hotspot/horizontal-logo.svg" /></a>
 </section>
 
 <section>
   <h3>Horizontal logo PNG (light)</h3>
-  <img src="kiwix-hotspot/horizontal-logo-light.png" />
+  <a target="_blank" href="kiwix-hotspot/horizontal-logo-light.png"><img src="kiwix-hotspot/horizontal-logo-light.png" /></a>
 </section>
 
 <section class="dark">
   <h3>Horizontal logo PNG (dark)</h3>
-  <img src="kiwix-hotspot/horizontal-logo-dark.png" />
+  <a target="_blank" href="kiwix-hotspot/horizontal-logo-dark.png"><img src="kiwix-hotspot/horizontal-logo-dark.png" /></a>
 </section>
 
 </body>
