added favicon version (square centered)

--- a/branding/preview.html
+++ b/branding/preview.html
@@ -39,7 +39,7 @@
     }
   }
 </style>
-<link rel="shortcut icon" href="kiwix/icon-logo.svg" type="image/svg+xml">
+<link rel="shortcut icon" href="kiwix/square-logo-centered.svg" type="image/svg+xml">
 </head>
 
 <body>
@@ -128,6 +128,23 @@
 <section class="dark">
   <h3>Square logo PNG (dark)</h3>
   <a target="_blank" href="kiwix/square-logo-dark.png"><img src="kiwix/square-logo-dark.png" /></a>
+</section>
+
+<h2>Kiwix Square logo centered – use this as favicon! (1:1)</h2>
+
+<section>
+  <h3>Square logo centered SVG (theme-aware)</h3>
+  <a target="_blank" href="kiwix/square-logo-centered.svg"><img src="kiwix/square-logo-centered.svg" /></a>
+</section>
+
+<section>
+  <h3>Square logo centered PNG (light)</h3>
+  <a target="_blank" href="kiwix/square-logo-centered-light.png"><img src="kiwix/square-logo-centered-light.png" /></a>
+</section>
+
+<section class="dark">
+  <h3>Square logo centered PNG (dark)</h3>
+  <a target="_blank" href="kiwix/square-logo-centered-dark.png"><img src="kiwix/square-logo-centered-dark.png" /></a>
 </section>
 
 
