Added Kiwix JS Icon
/!\ the source 32 SVG version incorrectly includes the JS text

--- a/branding/preview.html
+++ b/branding/preview.html
@@ -184,5 +184,30 @@
   <a target="_blank" href="kiwix-hotspot/horizontal-logo-dark.png"><img src="kiwix-hotspot/horizontal-logo-dark.png" /></a>
 </section>
 
+<h2>Kiwix JS Icon (1:1)</h2>
+
+<p>Kiwix JS Icon is a variant of Kiwix Icon with a yellow (Javascript color) badge mentioning “JS”. Under 48px, the badge should not contain the “JS” text as it's too small to read and the badge provides enough information.</p>
+<p>The various sizes are not scaled-down version of a single design. Details around the bird's eye for instance are adjusted for various sizes. We thus have four different SVG which served as base for PNG ones.</p>
+
+<section>
+  <h3>Icon SVG (light/dark friendly)</h3>
+  <p>We have slightly different designs based on size. Dimensions in filename mean “this and above until next one”.</p>
+  <a target="_blank" href="kiwix-js/icon_256x256.svg"><img src="kiwix-js/icon_256x256.svg" /></a>
+  <a target="_blank" href="kiwix-js/icon_48x48.svg"><img src="kiwix-js/icon_48x48.svg" /></a>
+  <a target="_blank" href="kiwix-js/icon_32x32.svg"><img src="kiwix-js/icon_32x32.svg" /></a>
+  <a target="_blank" href="kiwix-js/icon_16x16.svg"><img src="kiwix-js/icon_16x16.svg" /></a>
+</section>
+
+<section>
+  <h3>Icon PNG (light/dark friendly)</h3>
+  <a target="_blank" href="kiwix-js/icon_1024x1024.png"><img src="kiwix-js/icon_1024x1024.png" /></a>
+  <a target="_blank" href="kiwix-js/icon_512x512.png"><img src="kiwix-js/icon_512x512.png" /></a>
+  <a target="_blank" href="kiwix-js/icon_256x256.png"><img src="kiwix-js/icon_256x256.png" /></a>
+  <a target="_blank" href="kiwix-js/icon_128x128.png"><img src="kiwix-js/icon_128x128.png" /></a>
+  <a target="_blank" href="kiwix-js/icon_48x48.png"><img src="kiwix-js/icon_48x48.png" /></a>
+  <a target="_blank" href="kiwix-js/icon_32x32.png"><img src="kiwix-js/icon_32x32.png" /></a>
+  <a target="_blank" href="kiwix-js/icon_16x16.png"><img src="kiwix-js/icon_16x16.png" /></a>
+</section>
+
 </body>
 </html>
