Removed dark mode versions
Those are not allowed anymore and should thus not be exposed.

--- a/branding/preview.html
+++ b/branding/preview.html
@@ -51,14 +51,13 @@
 <li>If you are not a Kiwix developer, please get in touch with <a href="mailto:contact@kiwix.org">contact@kiwix.org</a>.</li>
 <li>If you are a Kiwix developer, please check in <a href="https://kiwix.slack.com/"><code>#design</code></a> channel on Slack until we publish the visual guidelines.</li>
 <li>⚠️ All logos are provided without padding, yet padding is mandatory (must be added by user – ask on Slack!) except for <em>Icon</em> which is to be used directly.</li>
+<li>There are no dark-theme friendly version at the moment because the bird is never to be in white. If you need one, ask on Slack.</li>
 </ul>
-
-<hr />
 
 <h2>Kiwix Vertical logo (1.37:1)</h2>
 
 <section>
-  <h3>Vertical logo SVG (theme-aware)</h3>
+  <h3>Vertical logo SVG</h3>
   <a target="_blank" href="kiwix/vertical-logo.svg"><img src="kiwix/vertical-logo.svg" /></a>
 </section>
 
@@ -67,27 +66,15 @@
   <a target="_blank" href="kiwix/vertical-logo-light.png"><img src="kiwix/vertical-logo-light.png" /></a>
 </section>
 
-<section class="dark">
-  <h3>Vertical logo PNG (dark)</h3>
-  <a target="_blank" href="kiwix/vertical-logo-dark.png"><img src="kiwix/vertical-logo-dark.png" /></a>
-</section>
-
 <section>
   <h3>Vertical logo SVG (light/source)</h3>
   <a target="_blank" href="kiwix/vertical-logo-light-source.svg"><img src="kiwix/vertical-logo-light-source.svg" /></a>
 </section>
 
-<section class="dark">
-  <h3>Vertical logo SVG (dark/source)</h3>
-  <a target="_blank" href="kiwix/vertical-logo-dark-source.svg"><img src="kiwix/vertical-logo-dark-source.svg" /></a>
-</section>
-
-<hr />
-
 <h2>Kiwix Horizontal logo (1:4.98)</h2>
 
 <section>
-  <h3>Horizontal logo SVG (theme-aware)</h3>
+  <h3>Horizontal logo SVG</h3>
   <a target="_blank" href="kiwix/horizontal-logo.svg"><img src="kiwix/horizontal-logo.svg" /></a>
 </section>
 
@@ -96,27 +83,15 @@
   <a target="_blank" href="kiwix/horizontal-logo-light.png"><img src="kiwix/horizontal-logo-light.png" /></a>
 </section>
 
-<section class="dark">
-  <h3>Horizontal logo PNG (dark)</h3>
-  <a target="_blank" href="kiwix/horizontal-logo-dark.png"><img src="kiwix/horizontal-logo-dark.png" /></a>
-</section>
-
 <section>
   <h3>Horizontal logo SVG (light/source)</h3>
   <a target="_blank" href="kiwix/horizontal-logo-light-source.svg"><img src="kiwix/horizontal-logo-light-source.svg" /></a>
 </section>
 
-<section class="dark">
-  <h3>Horizontal logo SVG (dark/source)</h3>
-  <a target="_blank" href="kiwix/horizontal-logo-dark-source.svg"><img src="kiwix/horizontal-logo-dark-source.svg" /></a>
-</section>
-
-<hr />
-
 <h2>Kiwix Square logo (1:1)</h2>
 
 <section>
-  <h3>Square logo SVG (theme-aware)</h3>
+  <h3>Square logo SVG</h3>
   <a target="_blank" href="kiwix/square-logo.svg"><img src="kiwix/square-logo.svg" /></a>
 </section>
 
@@ -125,15 +100,10 @@
   <a target="_blank" href="kiwix/square-logo-light.png"><img src="kiwix/square-logo-light.png" /></a>
 </section>
 
-<section class="dark">
-  <h3>Square logo PNG (dark)</h3>
-  <a target="_blank" href="kiwix/square-logo-dark.png"><img src="kiwix/square-logo-dark.png" /></a>
-</section>
-
 <h2>Kiwix Square logo centered – use this as favicon! (1:1)</h2>
 
 <section>
-  <h3>Square logo centered SVG (theme-aware)</h3>
+  <h3>Square logo centered SVG</h3>
   <a target="_blank" href="kiwix/square-logo-centered.svg"><img src="kiwix/square-logo-centered.svg" /></a>
 </section>
 
@@ -142,16 +112,10 @@
   <a target="_blank" href="kiwix/square-logo-centered-light.png"><img src="kiwix/square-logo-centered-light.png" /></a>
 </section>
 
-<section class="dark">
-  <h3>Square logo centered PNG (dark)</h3>
-  <a target="_blank" href="kiwix/square-logo-centered-dark.png"><img src="kiwix/square-logo-centered-dark.png" /></a>
-</section>
-
-
 <h2>Kiwix Icon logo (square with padding for standalone use – 1:1)</h2>
 
 <section>
-  <h3>Icon logo SVG (theme-aware)</h3>
+  <h3>Icon logo SVG</h3>
   <a target="_blank" href="kiwix/icon-logo.svg"><img src="kiwix/icon-logo.svg" /></a>
 </section>
 
@@ -160,28 +124,16 @@
   <a target="_blank" href="kiwix/icon-logo-light.png"><img src="kiwix/icon-logo-light.png" /></a>
 </section>
 
-<section class="dark">
-  <h3>Icon logo PNG (dark)</h3>
-  <a target="_blank" href="kiwix/icon-logo-dark.png"><img src="kiwix/icon-logo-dark.png" /></a>
-</section>
-
-<hr />
-
 <h2>Kiwix Hotspot Horizontal logo (1:6.76)</h2>
 
 <section>
-  <h3>Horizontal logo SVG (theme-aware)</h3>
+  <h3>Horizontal logo SVG</h3>
   <a target="_blank" href="kiwix-hotspot/horizontal-logo.svg"><img src="kiwix-hotspot/horizontal-logo.svg" /></a>
 </section>
 
 <section>
   <h3>Horizontal logo PNG (light)</h3>
   <a target="_blank" href="kiwix-hotspot/horizontal-logo-light.png"><img src="kiwix-hotspot/horizontal-logo-light.png" /></a>
-</section>
-
-<section class="dark">
-  <h3>Horizontal logo PNG (dark)</h3>
-  <a target="_blank" href="kiwix-hotspot/horizontal-logo-dark.png"><img src="kiwix-hotspot/horizontal-logo-dark.png" /></a>
 </section>
 
 <h2>Kiwix JS Icon (1:1)</h2>
