Added on-dark preview for Kiwix-JS icon

--- a/branding/preview.html
+++ b/branding/preview.html
@@ -150,8 +150,25 @@
   <a target="_blank" href="kiwix-js/icon_16x16.svg"><img src="kiwix-js/icon_16x16.svg" /></a>
 </section>
 
+<section class="dark">
+  <a target="_blank" href="kiwix-js/icon_256x256.svg"><img src="kiwix-js/icon_256x256.svg" /></a>
+  <a target="_blank" href="kiwix-js/icon_48x48.svg"><img src="kiwix-js/icon_48x48.svg" /></a>
+  <a target="_blank" href="kiwix-js/icon_32x32.svg"><img src="kiwix-js/icon_32x32.svg" /></a>
+  <a target="_blank" href="kiwix-js/icon_16x16.svg"><img src="kiwix-js/icon_16x16.svg" /></a>
+</section>
+
 <section>
   <h3>Icon PNG (light/dark friendly)</h3>
+  <a target="_blank" href="kiwix-js/icon_1024x1024.png"><img src="kiwix-js/icon_1024x1024.png" /></a>
+  <a target="_blank" href="kiwix-js/icon_512x512.png"><img src="kiwix-js/icon_512x512.png" /></a>
+  <a target="_blank" href="kiwix-js/icon_256x256.png"><img src="kiwix-js/icon_256x256.png" /></a>
+  <a target="_blank" href="kiwix-js/icon_128x128.png"><img src="kiwix-js/icon_128x128.png" /></a>
+  <a target="_blank" href="kiwix-js/icon_48x48.png"><img src="kiwix-js/icon_48x48.png" /></a>
+  <a target="_blank" href="kiwix-js/icon_32x32.png"><img src="kiwix-js/icon_32x32.png" /></a>
+  <a target="_blank" href="kiwix-js/icon_16x16.png"><img src="kiwix-js/icon_16x16.png" /></a>
+</section>
+
+<section class="dark">
   <a target="_blank" href="kiwix-js/icon_1024x1024.png"><img src="kiwix-js/icon_1024x1024.png" /></a>
   <a target="_blank" href="kiwix-js/icon_512x512.png"><img src="kiwix-js/icon_512x512.png" /></a>
   <a target="_blank" href="kiwix-js/icon_256x256.png"><img src="kiwix-js/icon_256x256.png" /></a>
